--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,10 +33,10 @@
                 <div class="opcoes-traducao">
                     <label for="to-language">Traduzir para:</label>
                     <select id="to-language">
-                        <option value="pt">Português</option>
                         <option value="en">Inglês</option>
                         <option value="es">Espanhol</option>
                         <option value="fr">Francês</option>
+                        <option value="pt">Português</option>
                     </select>
                 </div>
                 <textarea id="translated-text" cols="50" rows="8" readonly placeholder="  A tradução aparecerá aqui..."></textarea>
@@ -45,7 +45,7 @@
 
         <p id="status-message"></p>
         
-        <button class="botao-traduzir" id="translate-btn">Traduzir Agora</button>
+        <button class="botao-traduzir" id="translate-btn">Traduzir</button>
         <br><br>
         
 
