--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="objetivo">
-            <h1>Tradutor com API da Azure</h1>
+            <h1>Tradutor</h1>
         </div>
         
         <div class="txt">
