--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,16 @@
                         <option value="pt">Português</option>
                         <option value="en">Inglês</option>
                         <option value="es">Espanhol</option>
+                        <option value="it">Italiano</option>
+                        <option value="ja">Japonês</option>
+                        <option value="ko">Coreano</option>
+                        <option value="ru">Russo</option>
+                        <option value="he">Hebraico</option>
+                        <option value="de">Alemão</option>
+                        <option value-"el">Grego</option>
+                        <option value="nl">Holandês</option>
+                        <option value="zh-Hans">Chinês</option>
+                        <option value="ar">Árabe</option>
                     </select>
                 </div>
                 <textarea id="text-to-translate" cols="50" rows="8" placeholder="  Digite o texto aqui..."></textarea>
@@ -37,6 +47,16 @@
                         <option value="es">Espanhol</option>
                         <option value="fr">Francês</option>
                         <option value="pt">Português</option>
+                        <option value="it">Italiano</option>
+                        <option value="ja">Japonês</option>
+                        <option value="ko">Coreano</option>
+                        <option value="ru">Russo</option>
+                        <option value="he">Hebraico</option>
+                        <option value="de">Alemão</option>
+                        <option value-"el">Grego</option>
+                        <option value="nl">Holandês</option>
+                        <option value="zh-Hans">Chinês</option>
+                        <option value="ar">Árabe</option>
                     </select>
                 </div>
                 <textarea id="translated-text" cols="50" rows="8" readonly placeholder="  A tradução aparecerá aqui..."></textarea>
